# Task-Management-System

./: .gitignore  CMakeLists.txt
UserService/: CMakeLists.txt  DataBase.txt  build.cmd
UserService/src/: DataBase.h  TextFileDataBase.cpp  TextFileDataBase.h  User.cpp  User.h  UserService.cpp
UserService/tests/: CMakeLists.txt
common/: CMakeLists.txt
common/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
common/tests/: CMakeLists.txt  test_Logger.cpp
